compiler/tests/fail/arm-m4/intrinsic_smulw_hwS.jazz
export
fn smulw_hw(reg u32 x y) -> reg u32 {
    reg u32 r;
    ?{}, r = #SMULWBS(x, y);
    return r;
}
